
Consult the file CHANGES.html for more detailed information about changed
API and behavior across ns-3 releases.

Release 3.10
===========

Availability
------------
This release is not yet available.

Supported platforms
-------------------
ns-3.10 has been tested on the following platforms: (TBD)

New user-visible features
-------------------------

   - Wi-Fi MAC high classes have been reorganised in attempt to
     consolidate shared functionality into a single class. This new
     class is RegularWifiMac, and it derives from the abstract
     WifiMac, and is parent of AdhocWifiMac, StaWifiMac, ApWifiMac,
     and MeshWifiInterfaceMac. The QoS and non-QoS class variants are
     no longer, with a RegularWifiMac attribute "QosSupported"
     allowing selection between these two modes of
     operation.

   - Support for IEEE 802.11g (specifically, rates with Modulation
     Class ERP-OFDM) has been added to the wifi module. The new
     WifiModes have names of the form ErpOfdmRatexxMbps, where xx is
     the rate in Mbps (one of 6, 9, 12, 18, 24, 36, 48, 54), and a
     WifiPhyStandard enumeration WIFI_PHY_STANDARD_80211g has been
     added to allow configuration of a Wi-Fi STA supporting ERP-OFDM,
     HR/DSSS, and DSSS rates (which some call an "802.11b/g" station).

   - Two attributes were added to WaypointMobilityModel.  The first
     "LazyNotify" (default false), if enabled to true, will suppress
     course change notifications if there are no position updates.
     The second, "InitialPositionIsWaypoint" (default false), if enabled,
     will allow an initial call to SetPosition () (before any waypoints
     have been added) to be treated as the first waypoint.

   - Regression testing is now completely performed within test.py
     rather than a separate "./waf --regression" that consults
     reference traces in the ns-3.x-ref-traces directory.  In most
     cases, the example programs whose traces were included in 